--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".root.App"
+        android:name=".MovieApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +13,7 @@
         android:fullBackupContent="false"
         android:theme="@style/AppTheme">
         <activity
-            android:name="marcos.movieapp.MainActivity"
+            android:name="marcos.movieapp.searchMovie.SearchMovieActivity"
             android:label="@string/title_activity_search_movie"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
