--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,14 @@
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
     }
 
     dependencies {
+        //noinspection GradleDynamicVersion
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
@@ -12,21 +17,19 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    google()
 }
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 27
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "marcos.movieapp"
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        jackOptions {
-            enabled true
-        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -47,6 +50,9 @@ android {
             testProguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguardTest-rules.pro'
         }
     }
+    buildTypes.each {
+        it.buildConfigField 'String', 'OMDB_API_KEY', keystoreProperties['OMDbApiKey']
+    }
 }
 
 dependencies {
@@ -55,12 +61,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile "com.android.support:appcompat-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:cardview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:design:$rootProject.supportLibraryVersion"
-    compile "com.android.support:recyclerview-v7:$rootProject.supportLibraryVersion"
-    compile "com.android.support:support-v4:$rootProject.supportLibraryVersion"
-    compile "com.android.support.test.espresso:espresso-idling-resource:$rootProject.espressoVersion"
+    compile "com.android.support:appcompat-v7:27.0.1"
+    compile "com.android.support:cardview-v7:27.0.1"
+    compile "com.android.support:design:27.0.1"
+    compile "com.android.support:recyclerview-v7:27.0.1"
+    compile "com.android.support:support-v4:27.0.1"
+    compile "com.android.support.test.espresso:espresso-idling-resource:3.0.1"
 
     compile "com.google.code.gson:gson:$rootProject.gsonVersion"
     compile "com.google.guava:guava:$rootProject.guavaVersion"
@@ -78,8 +84,8 @@ dependencies {
 
     testCompile "junit:junit:$rootProject.ext.junitVersion"
 
-    compile('com.crashlytics.sdk.android:crashlytics:2.6.6@aar') {
-        transitive = true;
+    compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+        transitive = true
     }
 
     compile 'com.facebook.stetho:stetho:1.4.2'
