Reading keystore.properties to define api token

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
     }
     buildTypes.each {
         it.buildConfigField 'String', 'OMDB_API_KEY', keystoreProperties['OMDbApiKey']
+        it.buildConfigField 'String', 'API_HOST', keystoreProperties['ApiHost']
     }
 }
 
